src/objects/Engagement__c.object
<CustomObject>
    <description>Object for customer engagements</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Archive_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to archive records.</description>
        <label>Archive Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Engagement External ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Attendance__c</fullName>
        <label>Event Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Invited Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended Contacts</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Topics__c</fullName>
        <label>Event Topics</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperative agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAA (Broad Agency Announcement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAA (Inter Agency Agreement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Agency__c</fullName>
        <label>Funding Agency</label>
        <picklist>
            <picklistValues>
                <fullName>Department of Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of  Commerce</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_RT_indicator__c</fullName>
        <formula>(IF(RecordType.DeveloperName = &quot;Event&quot;, &quot;Event&quot;,
(IF(RecordType.DeveloperName = &quot;Group&quot;, &quot;Group&quot;,
(IF(RecordType.DeveloperName = &quot;Agreement&quot;,&quot;Agreement&quot;,
(IF(RecordType.DeveloperName = &quot;Funding_Opportunity&quot; ,&quot;Funding Opportunity&quot;,
(IF(RecordType.DeveloperName = &quot;Institute&quot;, &quot;Institute&quot;,
&quot;Topic&quot;))))))))))</formula>
        <label>Hidden RT indicator ENG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institute_Phone_Number__c</fullName>
        <description>Institute phone number for the Institute engagement record.</description>
        <label>Institute Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Institute_Website__c</fullName>
        <description>Institute website for the institute engagement record.</description>
        <label>Institute Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NIST_OU__c</fullName>
        <description>A list of all of the NIST OUs.</description>
        <label>NIST OU</label>
        <picklist>
            <picklistValues>
                <fullName>CTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMNPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADIIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operating_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the account for the Institute Engagement record type.</description>
        <label>Operating Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <globalPicklist>Sub_Sector</globalPicklist>
        <inlineHelpText>This is a list of industry categories.</inlineHelpText>
        <label>Sub Sector</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Engagement</label>
    <listViews>
        <fullName>ADIIS_Engagements</fullName>
        <columns>NAME</columns>
        <columns>NIST_OU__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NIST_OU__c</field>
            <operation>equals</operation>
            <value>ADIIS</value>
        </filters>
        <label>ADIIS Engagements</label>
    </listViews>
    <listViews>
        <fullName>ADLP_Engagements</fullName>
        <columns>NAME</columns>
        <columns>NIST_OU__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NIST_OU__c</field>
            <operation>equals</operation>
            <value>ADLP</value>
        </filters>
        <label>ADLP Engagements</label>
    </listViews>
    <listViews>
        <fullName>AMNPO_Engagements</fullName>
        <columns>NAME</columns>
        <columns>NIST_OU__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NIST_OU__c</field>
            <operation>equals</operation>
            <value>AMNPO</value>
        </filters>
        <label>AMNPO Engagements</label>
    </listViews>
    <listViews>
        <fullName>Agreement_Engagements</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Agreement</value>
        </filters>
        <label>Agreement Engagements</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CNST_Engagements</fullName>
        <columns>NAME</columns>
        <columns>NIST_OU__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NIST_OU__c</field>
            <operation>equals</operation>
            <value>CNST</value>
        </filters>
        <label>CNST Engagements</label>
    </listViews>
    <listViews>
        <fullName>CTL_Engagements</fullName>
        <columns>NAME</columns>
        <columns>NIST_OU__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NIST_OU__c</field>
            <operation>equals</operation>
            <value>CTL</value>
        </filters>
        <label>CTL Engagements</label>
    </listViews>
    <listViews>
        <fullName>DO_Engagements</fullName>
        <columns>NAME</columns>
        <columns>NIST_OU__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NIST_OU__c</field>
            <operation>equals</operation>
            <value>DO</value>
        </filters>
        <label>DO Engagements</label>
    </listViews>
    <listViews>
        <fullName>EL_Engagements</fullName>
        <columns>NAME</columns>
        <columns>NIST_OU__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NIST_OU__c</field>
            <operation>equals</operation>
            <value>EL</value>
        </filters>
        <label>EL Engagements</label>
    </listViews>
    <listViews>
        <fullName>Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Event</value>
        </filters>
        <label>Events</label>
    </listViews>
    <listViews>
        <fullName>Funding_Opportunities_Engagements</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Funding_Opportunity</value>
        </filters>
        <label>Funding Opportunities Engagements</label>
    </listViews>
    <listViews>
        <fullName>Groups</fullName>
        <columns>NAME</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Group</value>
        </filters>
        <label>Groups</label>
    </listViews>
    <listViews>
        <fullName>ITL_Engagements</fullName>
        <columns>NAME</columns>
        <columns>NIST_OU__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NIST_OU__c</field>
            <operation>equals</operation>
            <value>ITL</value>
        </filters>
        <label>ITL Engagements</label>
    </listViews>
    <listViews>
        <fullName>Institutes</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Institute</value>
        </filters>
        <label>Institutes</label>
    </listViews>
    <listViews>
        <fullName>Interests</fullName>
        <columns>NAME</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Interest</value>
        </filters>
        <label>Interests</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <recordTypes>
        <fullName>Agreement</fullName>
        <active>true</active>
        <description>To be utilized to define Agreement</description>
        <label>Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>To be utilized to define NIST events</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Funding_Opportunity</fullName>
        <active>true</active>
        <description>To be utilized to define Funding Opportunity</description>
        <label>Funding Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group</fullName>
        <active>true</active>
        <description>To be utilized to define formal NIST groups</description>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Institute</fullName>
        <active>true</active>
        <description>To be utilized to define institutes.</description>
        <label>Institute</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interest</fullName>
        <active>true</active>
        <description>To be utilized to capture topics of interest</description>
        <label>Interest</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Created_By_Archive_Record</fullName>
        <active>true</active>
        <description>Only a user who created the record type can archive the record.</description>
        <errorConditionFormula>AND (NOT(ISBLANK(CreatedById)), Archive_Record__c  == true,$User.Id &lt;&gt; CreatedById)</errorConditionFormula>
        <errorMessage>You cannot archive the record because you did not create the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date</fullName>
        <active>true</active>
        <description>Event Start Date Cannot Be After Event End Date</description>
        <errorConditionFormula>Event_End_Date__c   &lt;  Event_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Event_End_Date__c</errorDisplayField>
        <errorMessage>Event Start Date Cannot be After Event End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Other</fullName>
        <active>true</active>
        <description>Please provide other type when selecting &quot;Other&quot;.</description>
        <errorConditionFormula>ISBLANK(Other__c)  &amp;&amp; 
 ISPICKVAL( Event_Type__c,&quot;Other&quot;)</errorConditionFormula>
        <errorDisplayField>Other__c</errorDisplayField>
        <errorMessage>Please provide other type when selecting &quot;Other&quot;.</errorMessage>
    </validationRules>
</CustomObject>